--- a/.htaccess
+++ b/.htaccess
@@ -13,3 +13,4 @@ RewriteCond %{REQUEST_METHOD} =DELETE
 RewriteRule ^([a-zA-Z0-9_]+)$ src/index.php?table=$1 [B,L]
 RewriteCond %{REQUEST_METHOD} =DELETE
 RewriteRule ^([a-zA-Z0-9_]+)/({.*})$ src/index.php?table=$1&champs=$2 [B,L]
+RewriteRule ^$ - [R=400,L]
